prodMetadata/src/objects/Policy_Rec__c.object
<CustomObject>
    <description>Policy Recommendations</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checked if this is a currently active Policy Priority</description>
        <inlineHelpText>Checked if this is a currently active Policy Priority</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_monitoring__c</fullName>
        <label>How monitoring</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leg_agenda_2014__c</fullName>
        <description>If 2014 is selected in the Legislative agenda field this will say YES.</description>
        <formula>if(INCLUDES(Legislative_Agenda_Year__c,  &quot;2014&quot;),&quot;YES&quot;,&quot;NO&quot;)</formula>
        <inlineHelpText>If 2014 is selected in the Legislative agenda field this will say YES.</inlineHelpText>
        <label>Part of 2014 leg agenda</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legislative_Agenda_Year__c</fullName>
        <description>Which years&apos; legislative agenda is this Priority a part of?</description>
        <inlineHelpText>Which years&apos; legislative agenda is this Priority a part of?</inlineHelpText>
        <label>Legislative Agenda Year</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Potential-&apos;13</fullName>
                </value>
                <value>
                    <fullName>Potential &apos;14</fullName>
                </value>
                <value>
                    <fullName>Potential &apos;15</fullName>
                </value>
                <value>
                    <fullName>Potential &apos;16</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meta_Focus_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meta Policy Issue</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Focus_Area__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Focus_Area__c</referenceTo>
        <relationshipLabel>Policy Recommendations</relationshipLabel>
        <relationshipName>Policy_Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Num_Legislation__c</fullName>
        <description>Number of related legislation records attached.</description>
        <inlineHelpText>Number of related legislation records attached.</inlineHelpText>
        <label>Num. Legislation</label>
        <summaryForeignKey>PRec_Leg_junction__c.Policy_Rec__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <label>Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rec_Number_Roman_Numeral__c</fullName>
        <description>Roman Numeral that correlates with Policy Agenda</description>
        <inlineHelpText>Roman Numeral that correlates with Policy Agenda</inlineHelpText>
        <label>Rec Number (Roman Numeral)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rec_Number_Roman__c</fullName>
        <description>Roman Numeral for 1-30</description>
        <formula>CASE( Subchapter_Number__c, 
0,&quot;0&quot;,
1, &quot;I&quot;, 
2, &quot;II&quot;,
3, &quot;III&quot;,
4, &quot;IV&quot;,
5, &quot;V&quot;,
6, &quot;VI&quot;,
7, &quot;VII&quot;,
8, &quot;VIII&quot;,
9, &quot;IX&quot;,
10, &quot;X&quot;,
11, &quot;XI&quot;, 
12, &quot;XII&quot;,
13, &quot;XIII&quot;,
14, &quot;XIV&quot;,
15, &quot;XV&quot;,
16, &quot;XVI&quot;,
17, &quot;XVII&quot;,
18, &quot;XVIII&quot;,
19, &quot;XIX&quot;,
20, &quot;XX&quot;,
21, &quot;XXI&quot;, 
22, &quot;XXII&quot;,
23, &quot;XXIII&quot;,
24, &quot;XXIV&quot;,
25, &quot;XXV&quot;,
26, &quot;XXVI&quot;,
27, &quot;XXVII&quot;,
28, &quot;XXVIII&quot;,
29, &quot;XXIX&quot;,
30, &quot;XXX&quot;,
&quot;n/a&quot;)</formula>
        <inlineHelpText>goes up to 30</inlineHelpText>
        <label>Rec Number (Roman) (Deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <label>Recommendation</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Retire_Date__c</fullName>
        <description>Date when policy priority was retired</description>
        <inlineHelpText>Date when policy priority was retired</inlineHelpText>
        <label>Retire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retire_Reason__c</fullName>
        <label>Retire Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Legislation passed</fullName>
                </value>
                <value>
                    <fullName>Executive action</fullName>
                </value>
                <value>
                    <fullName>Deprioritized</fullName>
                </value>
                <value>
                    <fullName>Moved on</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>When IAVA started engaging on this policy priority</description>
        <inlineHelpText>When IAVA started engaging on this policy priority</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nothing</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Interest</fullName>
                </value>
                <value>
                    <fullName>Legislation introduced</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subchapter_Number__c</fullName>
        <description>Formerly Policy Recommendation Priority by Focus Area</description>
        <inlineHelpText>Formerly Policy Recommendation Priority by Focus Area</inlineHelpText>
        <label>Subchapter Number</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Targets__c</fullName>
        <description>This Policy Recommendation relates to which level of govt or sector?</description>
        <inlineHelpText>This Policy Recommendation relates to which level of govt or sector?</inlineHelpText>
        <label>Targets</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Congress</fullName>
                </value>
                <value>
                    <fullName>State and Local</fullName>
                </value>
                <value>
                    <fullName>Private Sector</fullName>
                </value>
                <value>
                    <fullName>Non-Profits</fullName>
                </value>
                <value>
                    <fullName>Philanthropy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X21st_Century_Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>21st Century Solution</label>
        <type>Checkbox</type>
    </fields>
    <label>Policy Recommendation</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>Meta_Focus_Area__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Active__c</columns>
        <columns>Priority__c</columns>
        <columns>How_monitoring__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active</label>
    </listViews>
    <listViews>
        <fullName>Active_year</fullName>
        <columns>Legislative_Agenda_Year__c</columns>
        <columns>Meta_Focus_Area__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Active__c</columns>
        <columns>Priority__c</columns>
        <columns>How_monitoring__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active_year</label>
    </listViews>
    <listViews>
        <fullName>All_2014_Policy_Recommendations</fullName>
        <columns>NAME</columns>
        <columns>Legislative_Agenda_Year__c</columns>
        <columns>Meta_Focus_Area__c</columns>
        <columns>Leg_agenda_2014__c</columns>
        <columns>Subchapter_Number__c</columns>
        <columns>Rec_Number_Roman_Numeral__c</columns>
        <columns>Targets__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Leg_agenda_2014__c</field>
            <operation>equals</operation>
            <value>YES</value>
        </filters>
        <label>All 2014 Policy Recommendations</label>
    </listViews>
    <listViews>
        <fullName>Homelessness_Recommendations</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Legislative_Agenda_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Meta_Focus_Area__c</field>
            <operation>equals</operation>
            <value>Homelessness</value>
        </filters>
        <label>Homelessness Recommendations</label>
    </listViews>
    <listViews>
        <fullName>Issue_Employment_Recs</fullName>
        <columns>NAME</columns>
        <columns>Recommendation__c</columns>
        <columns>Meta_Focus_Area__c</columns>
        <columns>Targets__c</columns>
        <columns>Leg_agenda_2014__c</columns>
        <columns>Subchapter_Number__c</columns>
        <columns>Rec_Number_Roman_Numeral__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Meta_Focus_Area__c</field>
            <operation>equals</operation>
            <value>Employment</value>
        </filters>
        <label>Issue: Employment Recs</label>
    </listViews>
    <listViews>
        <fullName>Leg_Count</fullName>
        <columns>Meta_Focus_Area__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Active__c</columns>
        <columns>Priority__c</columns>
        <columns>How_monitoring__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Num_Legislation__c</columns>
        <filterScope>Everything</filterScope>
        <label>Leg Count</label>
    </listViews>
    <listViews>
        <fullName>Leg_Introduced</fullName>
        <columns>Meta_Focus_Area__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Active__c</columns>
        <columns>Priority__c</columns>
        <columns>How_monitoring__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Legislation introduced</value>
        </filters>
        <label>Status: Leg Introduced</label>
    </listViews>
    <listViews>
        <fullName>Part_of_2013_Agenda</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Active__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Recommendation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Leg_agenda_2014__c</field>
            <operation>equals</operation>
            <value>YES</value>
        </filters>
        <label>Part of 2013 Agenda</label>
    </listViews>
    <listViews>
        <fullName>Policy_Agenda_2015_Potential_Recs</fullName>
        <columns>NAME</columns>
        <columns>Legislative_Agenda_Year__c</columns>
        <columns>Meta_Focus_Area__c</columns>
        <columns>Recommendation__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Legislative_Agenda_Year__c</field>
            <operation>includes</operation>
            <value>Potential &apos;15</value>
        </filters>
        <label>Policy Agenda: 2015 Potential Recs</label>
    </listViews>
    <listViews>
        <fullName>Potential_2014_Recommendations</fullName>
        <columns>NAME</columns>
        <columns>Recommendation__c</columns>
        <columns>Targets__c</columns>
        <columns>Meta_Focus_Area__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Legislative_Agenda_Year__c</field>
            <operation>includes</operation>
            <value>Potential &apos;14</value>
        </filters>
        <label>Potential 2014 Recommendations</label>
    </listViews>
    <listViews>
        <fullName>Status_Interest</fullName>
        <columns>Meta_Focus_Area__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Active__c</columns>
        <columns>Priority__c</columns>
        <columns>How_monitoring__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Interest</value>
        </filters>
        <label>Status: Interest</label>
    </listViews>
    <listViews>
        <fullName>Suicide_and_Mental_Health_Recommendation</fullName>
        <columns>NAME</columns>
        <columns>Recommendation__c</columns>
        <columns>Meta_Focus_Area__c</columns>
        <columns>Targets__c</columns>
        <columns>Leg_agenda_2014__c</columns>
        <columns>Status__c</columns>
        <columns>Subchapter_Number__c</columns>
        <columns>Rec_Number_Roman_Numeral__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Meta_Focus_Area__c</field>
            <operation>equals</operation>
            <value>Suicide and Mental Health</value>
        </filters>
        <label>Issue: Suicide &amp; Mental Health Recs</label>
    </listViews>
    <nameField>
        <label>Policy Rec Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>